@@ -2,6 +2,7 @@ Version 0.5.1 - UNRELEASED
  * added extrusion for 2D models
  * 2D projection of multi-layered 2D models
  * significantly improved performance of 3D visualization
+ * fixed "help" links for Windows users
  * improved detection of library locations for Windows package
  * minor bugs fixed
 
